# KrishiRakshak-SIH2k25

./: .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README-n8n.md  README.md  alembic.ini  docker-compose.yml  init-db.sh  main.py  pyproject.toml  start-n8n.sh
alembic/: env.py
alembic/versions/: bd02e81c877e_initial_migration.py
app/: main.py
app/api/: analysis.py  auth.py  chat.py  community.py  knowledge.py  location.py  triggers.py  upload.py  webhooks.py
app/core/: config.py  database.py  dependencies.py  security.py
app/models/: database.py  schemas.py
app/services/: ai_service.py  image_service.py  vector_service.py
configs/: dynamic.yml  ngrok.yml  permissions.json  traefik.yml
n8n-data/: 01-image-analysis-workflow.json  02-batch-analysis-workflow.json  03-community-moderation-workflow.json  04-weather-market-integration-workflow.json  05-smart-notification-workflow.json
tests/: README.md  __init__.py  conftest.py  run_all_tests.py  run_tests.py  test.sh  test_analysis_endpoints.py  test_community_endpoints.py  test_container_endpoints.py  test_knowledge_endpoints.py  test_location_endpoints.py  test_triggers.py  test_upload_endpoints.py  test_webhooks.py
